Bump Java Version to 17/25 (#97)
* initial refactorings for Java 25 compatibility

spotbugs + pmd-plugin still need new releases that work on Java 25

* update CI config

* JDK builds pass

updates to the analysis plugins required some adjustments

* utilize Java 17 features

* fix documentation

* cleanups

* fix visibility issues

* potential fix for breaking GUI tests

* example: fix GUI tests

* cleanups

* jung: do not run GUI tests for now

* Revert "jung: do not run GUI tests for now"

This reverts commit 6a6645488a33bf2befe7bb367e9303b97edcabcb.

* jung: found workaround for crashing JVM

* jacoco: correctly track coverage in GUI tests

* Revert "jung: found workaround for crashing JVM"

This reverts commit d99704042b8029de29577d89becf195000083447.

* Reapply "jung: do not run GUI tests for now"

This reverts commit 176cece7fff1e6ccb98f45efa252f1dba0d4ccea.

* jung: add note